--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
         id: go
 
       - name: Install godoc
-        run: go get -u golang.org/x/tools/godoc
+        run: apt install golang-doc
 
       - name: Checkout the code
         uses: actions/checkout@master
