--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
         id: go
 
       - name: Install godoc
-        run: sudo apt install golang-doc
+        run: sudo apt install golang-go.tools
 
       - name: Checkout the code
         uses: actions/checkout@master
