--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,13 +22,20 @@ jobs:
 
       - name: Checkout the code
         uses: actions/checkout@master
+        with:
+          persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
+          fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
 
       - name: Build the godoc
         run: ./docs.sh
 
-      - name: Push to Docs
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.API_TOKEN_GITHUB }}
-          directory: 'docs-build'
-          repository: 'GIFTS-fs/Docs'
+      - name: Push to docs
+        run: |
+          rm -rf .git
+          cd docs-build
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git init
+          git add *.html
+          git commit -m "Add docs" 
+          git push "https://$GITHUB_ACTOR:${{ secrets.API_TOKEN_GITHUB }}@github.com/GIFTS-fs/Docs.git" master -f
