--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,7 @@
 {
-    "GiftsBlockSize": 4096
+    "GiftsBlockSize": 4096,
+    "Storages": [
+        "localhost:4000"
+    ],
+    "Master": "localhost:4001"
 }
