--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "MasterRebalanceIntervalSec": 10,
 	"TrafficDecayCounterHalfLife": 5000.0,
-    "GiftsBlockSize": 1048576,
+    "GiftsBlockSize": 8192,
     "Storages": [
         "localhost:4000",
 	    "localhost:4001",
