--- a/cmd/config.json
+++ b/cmd/config.json
@@ -1,4 +1,5 @@
 {
+	"DynamicReplicationEnabled": true,
     "MasterRebalanceIntervalSec": 10,
 	"TrafficDecayCounterHalfLife": 5000.0,
     "GiftsBlockSize": 8192,
