--- a/config/config.json
+++ b/config/config.json
@@ -1,5 +1,7 @@
 {
 	"DynamicReplicationEnabled": true,
+    "MaglevHashingMultipler": 100,
+	"BlockPlacementPolicy": 1,
     "MasterRebalanceIntervalSec": 10,
 	"TrafficDecayCounterHalfLife": 5000.0,
     "GiftsBlockSize": 8192,
