--- a/cmd/config.json
+++ b/cmd/config.json
@@ -2,6 +2,7 @@
 	"DynamicReplicationEnabled": true,
 	"MaglevHashingMultipler": 100,
 	"BlockPlacementPolicy": 1,
+	"ReplicaPlacementPolicy": 1,
     "MasterRebalanceIntervalSec": 10,
 	"TrafficDecayCounterHalfLife": 5000.0,
     "GiftsBlockSize": 8192,
