--- a/cmd/config.json
+++ b/cmd/config.json
@@ -3,6 +3,7 @@
 	"MaglevHashingMultipler": 100,
 	"BlockPlacementPolicy": 1,
 	"ReplicaPlacementPolicy": 1,
+	"ReplicaPlacementPermuTableSize": 10,
     "MasterRebalanceIntervalSec": 10,
 	"TrafficDecayCounterHalfLife": 5000.0,
     "GiftsBlockSize": 8192,
