replce failed instance and enhance wave

--- a/config/config.json
+++ b/config/config.json
@@ -8,10 +8,10 @@
   "TrafficDecayCounterHalfLife": 1000000000.0,
   "GiftsBlockSize": 65536,
   "Storages": [
-    "172.31.31.65:4000",
-    "172.31.23.208:4001",
-	  "172.31.19.215:4002",
-	  "172.31.27.63:4003"
+    ":4000",
+    ":4001",
+	  ":4002",
+	  ":4003"
   ],
-  "Master": "172.31.12.82:4004"
+  "Master": ":4004"
 }
